Some new keybinds, remove some needless stuff

--- a/init.org
+++ b/init.org
@@ -60,7 +60,6 @@
   - [[#dashboard][Dashboard]]
   - [[#evil-mode][Evil-mode]]
     - [[#evil-mode-configs][Evil mode configs]]
-    - [[#evil-visual-line-mode-better][Evil visual line mode (better?)]]
     - [[#org-mode-integration-with-evil][Org mode integration with evil]]
     - [[#evil-collection-mode][Evil collection mode]]
   - [[#org-mode][Org-mode]]
@@ -492,7 +491,6 @@ General keybindings
 (setq gtd-file "~/Nextcloud/Orgzly/gtd.org")
 (setq gtd-someday-file "~/Nextcloud/Orgzly/someday.org")
 (setq gtd-tickler-file "~/Nextcloud/Orgzly/tickler.org")
-(setq daily-file "~/Nextcloud/Orgzly/daily.org")
 (setq tech-notebook-file "~/Nextcloud/org/tech_notebook.org")
 (setq work-file "~/Nextcloud/org/work/work.org")
 
@@ -523,9 +521,11 @@ General keybindings
     "" '(:ignore t :which-key "language"))
 
   (my/leader-keys
-    "b"  'counsel-bookmark
+    "s"   'save-buffer
+
+    "b"   'counsel-bookmark
     "SPC" 'find-file
-    "/"  'swiper
+    "/"   'swiper
 
     "fp"  (list (lambda () (interactive) (find-file user-init-file-org)) :which-key "config")
 
@@ -556,6 +556,7 @@ General keybindings
     "oa"   'org-agenda
     "or"   'org-refile
     "os"   'org-archive-hierarchically
+    "og"   'counsel-org-goto
 
     "oc"   '(:ignore t :which-key "org-clock")
     "occ"  'org-capture
@@ -599,10 +600,13 @@ General keybindings
     "h"  '(:ignore t :which-key "describe")
     "hf" 'counsel-describe-function
     "hv" 'counsel-describe-variable
+    "hl" 'counsel-find-library
     "hk" 'helpful-key
+    "a"  'counsel-linux-app
 
     "x"   '(:ignore t :which-key "buffer")
     "xh"  'previous-buffer
+    "xa"  'ibuffer-list-buffers
     "xl"  'next-buffer
     "xk"  'kill-buffer
     "xs"  '(:ignore t :which-key "split-window")
@@ -669,16 +673,9 @@ Vim keybinds and goodness in emacs
   :config
   (evil-mode 1)
   (evil-set-initial-state 'dashboard-mode 'normal)
-  (evil-set-undo-system 'undo-tree))
-  ;;(define-key evil-normal-state-map (kbd "j") 'evil-next-visual-line)
-  ;;(define-key evil-normal-state-map (kbd "k") 'evil-previous-visual-line))
-#+end_src
-*** Evil visual line mode (better?)
-#+begin_src elisp
-(use-package evil-better-visual-line
-  :straight t
-  :config
-  (evil-better-visual-line-on))
+  (evil-set-undo-system 'undo-tree)
+  (define-key evil-normal-state-map (kbd "j") 'evil-next-visual-line)
+  (define-key evil-normal-state-map (kbd "k") 'evil-previous-visual-line))
 #+end_src
 *** Org mode integration with evil
 #+begin_src elisp
@@ -760,6 +757,8 @@ Dependency of the org-colored-text file
   (setq org-src-fontify-natively t
         org-src-preserve-indentation t ;; do not put two spaces on the left
         org-src-tab-acts-natively t)
+
+  (setq org-pretty-entities-include-sub-superscripts nil)
 
   (setq yt-iframe-format
     (concat "<iframe width=\"440\""
@@ -928,7 +927,8 @@ The notes (zettelkasten) god
     "ni" 'org-roam-insert
     "nI" 'org-roam-insert-immediate
     "no" 'org-roam-dailies-capture-today
-    "nt" 'org-roam-dailies-find-today)
+    "nt" 'org-roam-dailies-find-today
+    "ny" 'org-roam-dailies-find-yesterday)
 
   (setq org-roam-completion-everywhere t)
 
