Remove virtualenvwrapper package

--- a/init.org
+++ b/init.org
@@ -1404,18 +1404,11 @@ SBT
   :straight t
   :defer t
   :init
-  (advice-add 'python-mode :before 'elpy-enable))
-
-(use-package virtualenvwrapper
-  :straight t
-  :defer t
-  :init
-  (venv-initialize-interactive-shells)
-  (venv-initialize-eshell))
-
-(my/language-leader-def
-  "p" '(:ignore t :which-key "python")
-  "pf" 'elpy-autopep8-fix-code)
+  (advice-add 'python-mode :before 'elpy-enable)
+  :config
+  (my/language-leader-def
+    "p" '(:ignore t :which-key "python")
+    "pf" 'elpy-autopep8-fix-code))
 #+end_src
 *** Clojure
 #+begin_src elisp
