--- a/init.org
+++ b/init.org
@@ -11,6 +11,7 @@
     - [[#ensure-system-packages-to-check-they-exist][Ensure system packages to check they exist]]
   - [[#general-configs][General configs]]
     - [[#tangle-config-file-on-save][Tangle config file on save]]
+    - [[#keybindings][Keybindings]]
     - [[#custom-vars-file-so-it-doesnt-pollute-the-init-file][Custom vars file, so it doesn't pollute the init file]]
     - [[#start-emacs-in-fullscreen-happens-when-everything-is-loaded][Start emacs in fullscreen, happens when everything is loaded.]]
     - [[#set-the-emacs-user-directory-for-re-use-in-other-places][Set the emacs user directory for re-use in other places]]
@@ -55,7 +56,6 @@
       - [[#visual-fill-eg-the-visual-wrap-of-the-lines-1][Visual fill, e.g. the visual wrap of the lines]]
       - [[#auto-fill-eg-adding-line-breaks-to-lines-1][Auto fill, e.g. adding line breaks to lines]]
     - [[#highlight-current-line-1][Highlight current line]]
-  - [[#keybindings][Keybindings]]
   - [[#modeline][Modeline]]
   - [[#dashboard][Dashboard]]
   - [[#evil-mode][Evil-mode]]
@@ -86,6 +86,7 @@
     - [[#org-projectile][Org projectile]]
     - [[#org-archive-hierarchically][Org archive hierarchically]]
     - [[#flashcards-with-anki][Flashcards with Anki]]
+    - [[#wiki][Wiki]]
   - [[#magit][Magit]]
   - [[#counsel][Counsel]]
   - [[#ivy][Ivy]]
@@ -122,6 +123,7 @@
   - [[#writing][Writing]]
     - [[#writegood-mode][Writegood mode]]
     - [[#writeroom-mode][Writeroom mode]]
+  - [[#ielm][Ielm]]
 
 ** Package manager
 Must be in the beginning for ~use-package~ usage below.
@@ -177,6 +179,78 @@ Courtesy of the great emacs from scratch config: [[https://github.com/daviwil/em
 
 (add-hook 'org-mode-hook
   (lambda () (add-hook 'before-save-hook #'my/gtd-update-dblocks)))
+#+end_src
+*** Keybindings
+Using ~general.el~ to define a leader key and various bindings with it. In modes (e.g. insert mode and emacs mode) where space is not applicable, it uses ctrl + space.
+
+Make escape quit prompts.
+#+begin_src elisp
+(global-set-key (kbd "<escape>") 'keyboard-escape-quit)
+#+end_src
+
+General keybindings
+#+begin_src elisp
+(setq user-init-file-org "~/.emacs.d/init.org")
+(setq gtd-inbox-file "~/Nextcloud/Orgzly/inbox.org")
+(setq gtd-file "~/Nextcloud/Orgzly/gtd.org")
+(setq gtd-someday-file "~/Nextcloud/Orgzly/someday.org")
+(setq gtd-tickler-file "~/Nextcloud/Orgzly/tickler.org")
+(setq gtd-hobbies-file "~/Nextcloud/Orgzly/hobbies.org")
+(setq tech-notebook-file "~/Nextcloud/org/tech_notebook.org")
+(setq work-file "~/Nextcloud/org/work/work.org")
+
+;; would love to be able to do it like this but it doesn't work for some reason
+(defun my/open-file (file-name)
+  "Open a specific file"
+  (lambda ()
+    (interactive)
+    (find-file file-name)))
+
+(use-package general
+  :straight t
+  :config
+  (general-evil-setup t)
+
+  ;; general leader key
+  (general-create-definer my/leader-keys
+    :keymaps '(normal insert visual emacs)
+    :prefix "SPC"
+    :global-prefix "C-SPC")
+
+  ;; leader key for language specific bindings
+  (general-create-definer my/language-leader-def
+    :keymaps '(normal insert visual emacs)
+    :prefix "SPC l"
+    ;; for insert mode
+    :global-prefix "C-SPC l"
+    "" '(:ignore t :which-key "language"))
+
+  (my/leader-keys
+    "s"   'save-buffer
+
+    "SPC" 'find-file
+
+    "fp"  (list (lambda () (interactive) (find-file user-init-file-org)) :which-key "config")
+
+    "g"  '(:ignore t :which-key "gtd")
+    "gi"  (list (lambda () (interactive) (find-file gtd-inbox-file))   :which-key "inbox")
+    "gg"  (list (lambda () (interactive) (find-file gtd-file))         :which-key "gtd")
+    "gs"  (list (lambda () (interactive) (find-file gtd-someday-file)) :which-key "someday")
+    "gt"  (list (lambda () (interactive) (find-file gtd-tickler-file)) :which-key "tickler")
+    "gh"  (list (lambda () (interactive) (find-file gtd-tickler-file)) :which-key "hobbies")
+
+    "fw"  (list (lambda () (interactive) (find-file work-file)) :which-key "work")
+
+    "tn"  (list (lambda () (interactive) (find-file tech-notebook-file)) :which-key "tech-notebook")
+
+    "x"   '(:ignore t :which-key "buffer")
+    "xh"  'previous-buffer
+    "xa"  'ibuffer-list-buffers
+    "xl"  'next-buffer
+    "xk"  'kill-buffer
+    "xs"  '(:ignore t :which-key "split-window")
+    "xsr" 'split-window-right
+    "xsb" 'split-window-below))
 #+end_src
 *** Custom vars file, so it doesn't pollute the init file
 #+begin_src elisp
@@ -328,7 +402,10 @@ Here for informational purposes.
 *** Restart emacs from within emacs
 #+begin_src elisp
 (use-package restart-emacs
-  :straight t)
+  :straight t
+  :config
+  (my/leader-keys
+    "re" 'restart-emacs))
 #+end_src
 *** Better yes/no prompts
 Because writing yes is too much work.
@@ -479,161 +556,6 @@ Because writing yes is too much work.
 #+begin_src elisp
 (global-hl-line-mode)
 #+end_src
-** Keybindings
-Using ~general.el~ to define a leader key and various bindings with it. In modes (e.g. insert mode and emacs mode) where space is not applicable, it uses ctrl + space.
-
-Make escape quit prompts.
-#+begin_src elisp
-(global-set-key (kbd "<escape>") 'keyboard-escape-quit)
-#+end_src
-
-General keybindings
-#+begin_src elisp
-(setq user-init-file-org "~/.emacs.d/init.org")
-(setq gtd-inbox-file "~/Nextcloud/Orgzly/inbox.org")
-(setq gtd-file "~/Nextcloud/Orgzly/gtd.org")
-(setq gtd-someday-file "~/Nextcloud/Orgzly/someday.org")
-(setq gtd-tickler-file "~/Nextcloud/Orgzly/tickler.org")
-(setq tech-notebook-file "~/Nextcloud/org/tech_notebook.org")
-(setq work-file "~/Nextcloud/org/work/work.org")
-
-;; would love to be able to do it like this but it doesn't work for some reason
-(defun my/open-file (file-name)
-  "Open a specific file"
-  (lambda ()
-    (interactive)
-    (find-file file-name)))
-
-(use-package general
-  :straight t
-  :config
-  (general-evil-setup t)
-
-  ;; general leader key
-  (general-create-definer my/leader-keys
-    :keymaps '(normal insert visual emacs)
-    :prefix "SPC"
-    :global-prefix "C-SPC")
-
-  ;; leader key for language specific bindings
-  (general-create-definer my/language-leader-def
-    :keymaps '(normal insert visual emacs)
-    :prefix "SPC l"
-    ;; for insert mode
-    :global-prefix "C-SPC l"
-    "" '(:ignore t :which-key "language"))
-
-  (my/leader-keys
-    "s"   'save-buffer
-
-    "b"   'counsel-bookmark
-    "SPC" 'find-file
-    "/"   'swiper
-
-    "fp"  (list (lambda () (interactive) (find-file user-init-file-org)) :which-key "config")
-
-    "p"   '(:ignore t :which-key "projectile")
-    "pp"  'counsel-projectile-switch-project
-    "pk"  'projectile-kill-buffers
-    "pa"  'projectile-add-known-project
-    "pr"  'projectile-remove-known-project
-    "psr" 'projectile-ripgred
-    "pxe" 'projectile-run-eshell
-    "pf"  'counsel-projectile-find-file
-    "pS"  'projectile-save-project-buffers
-    "pD"  'projectile-dired
-
-    "em"  'mu4e
-
-    "g"  '(:ignore t :which-key "gtd")
-    "gi"  (list (lambda () (interactive) (find-file gtd-inbox-file))   :which-key "inbox")
-    "gg"  (list (lambda () (interactive) (find-file gtd-file))         :which-key "gtd")
-    "gs"  (list (lambda () (interactive) (find-file gtd-someday-file)) :which-key "someday")
-    "gt"  (list (lambda () (interactive) (find-file gtd-tickler-file)) :which-key "tickler")
-
-    "fd"  (list (lambda () (interactive) (find-file daily-file)) :which-key "daily")
-
-    "fw"  (list (lambda () (interactive) (find-file work-file)) :which-key "work")
-
-    "o"    '(:ignore t :which-key "org")
-    "oa"   'org-agenda
-    "or"   'org-refile
-    "os"   'org-archive-hierarchically
-    "og"   'counsel-org-goto
-
-    "oc"   '(:ignore t :which-key "org-clock")
-    "occ"  'org-capture
-    "oci"  'org-clock-in
-    "oco"  'org-clock-out
-    "ocl"  'org-clock-in-last
-    "ocr"  'org-clock-report
-    "ocg"  'org-clock-goto
-
-    "ok"   '(:ignore t :which-key "kanban")
-    "oki"  'org-kanban/initialize-at-end
-    "oks"  'org-kanban/shift
-
-    "op"   '(:ignore t :which-key "org-projectile")
-    "opt"  'org-projectile-project-todo-completing-read
-    "opg"  'org-projectile-goto-location-for-project
-    "opp"  'org-pomodoro
-
-    "ot" '(:ignore t :which-key "timestamp")
-    "otu" 'org-timestamp-up-day
-    "otd" 'org-timestamp-down-day
-    "otl" 'org-toggle-link-display
-
-    "od" 'org-decrypt-entry
-
-    "tn" (list (lambda () (interactive) (find-file tech-notebook-file)) :which-key "tech-notebook")
-
-    "m" '(:ignore t :which-key "todo")
-    "mt" 'org-todo
-    "ms" 'org-schedule
-    "md" 'org-deadline
-
-    "w"  '(:ignore t :which-key "window")
-    "wh" 'evil-window-left
-    "wl" 'evil-window-right
-    "wk" 'evil-window-up
-    "wj" 'evil-window-down
-
-    "q"  'howdoyou-query
-
-    "h"  '(:ignore t :which-key "describe")
-    "hf" 'counsel-describe-function
-    "hv" 'counsel-describe-variable
-    "hl" 'counsel-find-library
-    "hk" 'helpful-key
-    "a"  'counsel-linux-app
-
-    "x"   '(:ignore t :which-key "buffer")
-    "xh"  'previous-buffer
-    "xa"  'ibuffer-list-buffers
-    "xl"  'next-buffer
-    "xk"  'kill-buffer
-    "xs"  '(:ignore t :which-key "split-window")
-    "xsr" 'split-window-right
-    "xsb" 'split-window-below
-
-    "ie"  'emojify-insert-emoji
-
-    "re"  'restart-emacs
-
-    "eli" 'ielm
-
-    "ed"  '(:ignore t :which-key "elfeed-dashboard")
-    "edd" 'elfeed-dashboard
-    "edi" 'elfeed-dashboard-edit
-
-    "d" '(:ignore t :which-key "dired")
-    "dd" 'dired
-    "dj" 'dired-jump
-
-    "c" '(:ignore t :which-key "store link")
-    "cc" 'sl-store-link
-    "cp" 'sl-insert-link))
-#+end_src
 ** Modeline
 Doom modeline - it looks nice!
 #+begin_src elisp
@@ -674,6 +596,14 @@ Vim keybinds and goodness in emacs
   (setq evil-want-integration t)
   (setq evil-want-keybinding nil)
   :config
+  ;; Keybindings
+  (my/leader-keys
+    "w"  '(:ignore t :which-key "window")
+    "wh" 'evil-window-left
+    "wl" 'evil-window-right
+    "wk" 'evil-window-up
+    "wj" 'evil-window-down)
+
   (evil-mode 1)
   (evil-set-initial-state 'dashboard-mode 'normal)
   (evil-set-undo-system 'undo-tree)
@@ -729,6 +659,25 @@ Dependency of the org-colored-text file
   :hook
   (org-mode . my/org-mode-setup)
   :config
+  ;; Keybindings for org-mode
+  (my/leader-keys
+    "o"    '(:ignore t :which-key "org")
+    "oa"   'org-agenda
+    "or"   'org-refile
+    "os"   'org-archive-hierarchically
+    "og"   'counsel-org-goto
+
+    "ot" '(:ignore t :which-key "timestamp")
+    "otu" 'org-timestamp-up-day
+    "otd" 'org-timestamp-down-day
+    "otl" 'org-toggle-link-display
+
+    "od"  'org-decrypt-entry
+
+    "m" '(:ignore t :which-key "todo")
+    "mt" 'org-todo
+    "ms" 'org-schedule
+    "md" 'org-deadline)
   ;; TODO keywords that I use - the ones after the | are the done states
   (setq org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "NEXT(n)" "|" "DONE(d)" "CANCELLED(c)")))
 
@@ -815,6 +764,9 @@ Disable line numbers in org-mode
 (use-package org-capture
   :after org
   :config
+  ;; keybindings
+  (my/leader-keys
+    "occ"  'org-capture)
   ;; quick templates for org files
   (setq org-capture-templates
     '(("t" "Todo [inbox]" entry
@@ -880,6 +832,14 @@ Disable line numbers in org-mode
 (use-package org-clock
   :after org
   :config
+  ;; Keybindings
+  (my/leader-keys
+    "oc"   '(:ignore t :which-key "org-clock")
+    "oci"  'org-clock-in
+    "oco"  'org-clock-out
+    "ocl"  'org-clock-in-last
+    "ocr"  'org-clock-report
+    "ocg"  'org-clock-goto)
   ;; Resume clocking task when emacs is restarted
   (org-clock-persistence-insinuate)
   ;; Save the running clock and all clock history when exiting Emacs, load it on startup
@@ -901,13 +861,6 @@ Disable line numbers in org-mode
   ;; Agenda clock report parameters
   (setq org-agenda-clockreport-parameter-plist
     '(:link t :maxlevel 6 :fileskip0 t :compact t :narrow 60 :score 0)))
-#+end_src
-
-With counsel
-
-#+begin_src elisp
-(use-package counsel-org-clock
-  :straight t)
 #+end_src
 *** Org-roam
 The notes (zettelkasten) god
@@ -1033,7 +986,8 @@ Translate in org src blocks
 
 #+begin_src elisp
 (use-package ob-translate
-  :straight t)
+  :straight t
+  :after org)
 #+end_src
 *** Notifications
 #+begin_src elisp
@@ -1059,6 +1013,10 @@ Translate in org src blocks
   :straight t
   :after org
   :config
+  ;; keybindings
+  (my/leader-keys
+    "opp"  'org-pomodoro)
+
   (setq org-pomodoro-finished-sound (concat user-emacs-directory "/eraser.wav"))
   (setq org-pomodoro-short-break-sound (concat user-emacs-directory "/eraser.wav"))
   (setq org-pomodoro-long-break-sound (concat user-emacs-directory "/eraser.wav")))
@@ -1067,7 +1025,12 @@ Translate in org src blocks
 #+begin_src elisp
 (use-package org-kanban
   :straight t
-  :after org)
+  :after org
+  :config
+  (my/leader-keys
+    "ok"   '(:ignore t :which-key "kanban")
+    "oki"  'org-kanban/initialize-at-end
+    "oks"  'org-kanban/shift))
 #+end_src
 *** Org super agenda
 For a better way to group entries in the agenda.
@@ -1089,7 +1052,12 @@ For a better way to group entries in the agenda.
 #+begin_src elisp
 (use-package org-super-links
   :straight (:host github :repo "toshism/org-super-links" :branch "master")
-  :after org)
+  :after org
+  :config
+  (my/leader-keys
+    "c" '(:ignore t :which-key "store link")
+    "cc" 'sl-store-link
+    "cp" 'sl-insert-link))
 #+end_src
 *** Web tools
 #+begin_src elisp
@@ -1126,6 +1094,12 @@ For todos in projects managed by projectile.
   :init
   (org-projectile-per-project)
   :config
+  ;; Keybindings
+  (my/leader-keys
+    "op"   '(:ignore t :which-key "org-projectile")
+    "opt"  'org-projectile-project-todo-completing-read
+    "opg"  'org-projectile-goto-location-for-project)
+
   (setq org-projectile-per-project-filepath "todos.org")
 	(setq org-agenda-files (seq-filter 'file-readable-p (delete-dups (append org-agenda-files (org-projectile-todo-files))))))
 #+end_src
@@ -1133,7 +1107,8 @@ For todos in projects managed by projectile.
 Creates the heading before an archived heading in the archive file
 #+begin_src elisp
 (use-package org-archive-hierarchically
-  :straight (:host gitlab :repo "andersjohansson/org-archive-hierarchically" :branch "master"))
+  :straight (:host gitlab :repo "andersjohansson/org-archive-hierarchically" :branch "master")
+  :after org)
 #+end_src
 *** Flashcards with Anki
 #+begin_src elisp
@@ -1144,6 +1119,22 @@ Creates the heading before an archived heading in the archive file
   :if (eq system-type 'gnu/linux)
   :ensure-system-package anki
   :straight t)
+#+end_src
+*** Wiki
+#+begin_src elisp
+(use-package org-wiki
+  :defer 2
+  :straight (:host github :repo "caiorss/org-wiki" :branch "master")
+  :config
+  (setq org-wiki-location "~/Nextcloud/org/wiki")
+  (my/leader-keys
+    "ow" '(:ignore t :which-key "wiki")
+
+    "owi" 'org-wiki-index
+    "owl" 'org-wiki-insert-link
+    "own" 'org-wiki-insert-new
+    "owh" 'org-wiki-helm
+    "owc" 'org-wiki-close))
 #+end_src
 ** Magit
 The git supercharge
@@ -1168,7 +1159,16 @@ Counsel is a customized set of commands to replace ~find-file~ with ~counsel-fin
          :map minibuffer-local-map
          ("C-r" . 'counsel-minibuffer-history))
   :config
-  (counsel-mode 1))
+  (counsel-mode 1)
+
+  (my/leader-keys
+    "b"   'counsel-bookmark
+
+    "h"  '(:ignore t :which-key "describe")
+    "hf" 'counsel-describe-function
+    "hv" 'counsel-describe-variable
+    "hl" 'counsel-find-library
+    "a"  'counsel-linux-app))
 
 (use-package counsel-projectile
   :straight t
@@ -1187,17 +1187,9 @@ A more minimal completion framework
 (use-package ivy
   :straight t
   :diminish
-  :bind (("C-s" . swiper)
-         :map ivy-minibuffer-map
-         ("TAB" . ivy-alt-done)
-         ("C-l" . ivy-alt-done)
-         :map ivy-switch-buffer-map
-         ("C-k" . ivy-previous-line)
-         ("C-l" . ivy-done)
-         ("C-d" . ivy-switch-buffer-kill)
-         :map ivy-reverse-i-search-map
-         ("C-k" . ivy-previous-line)
-         ("C-d" . ivy-reverse-i-search-kill))
+  :bind
+  (:map ivy-minibuffer-map
+   ("TAB" . ivy-alt-done))
   :config
   (setq ivy-use-virtual-buffers t)
   (setq ivy-count-format "%d/%d ")
@@ -1207,6 +1199,10 @@ A more minimal completion framework
   (ivy-set-actions
     'counsel-find-file
     '(("d" delete-file "delete")))
+
+  (my/leader-keys
+    "/"   'swiper)
+
   (ivy-mode 1))
 
 (use-package ivy-rich
@@ -1242,7 +1238,10 @@ Your stack overflow and friends inside emacs (and the results are org files!)
 #+begin_src elisp
 (use-package howdoyou
   :straight t
-  :defer t)
+  :defer t
+  :config
+  (my/leader-keys
+    "q"  'howdoyou-query))
 #+end_src
 ** Language-specific
 *** Web-mode
@@ -1435,6 +1434,19 @@ SBT
   (define-key projectile-mode-map (kbd "s-p") 'projectile-command-map)
   (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map)
   (setq projectile-track-known-projects-automatically nil)
+
+  (my/leader-keys
+    "p"   '(:ignore t :which-key "projectile")
+    "pp"  'counsel-projectile-switch-project
+    "pk"  'projectile-kill-buffers
+    "pa"  'projectile-add-known-project
+    "pr"  'projectile-remove-known-project
+    "psr" 'projectile-ripgred
+    "pxe" 'projectile-run-eshell
+    "pf"  'counsel-projectile-find-file
+    "pS"  'projectile-save-project-buffers
+    "pD"  'projectile-dired)
+
   (projectile-mode +1))
 #+end_src
 ** Parens
@@ -1474,7 +1486,10 @@ Well, they do brighten up the place a bit. 🙉
 #+begin_src elisp
 (use-package emojify
   :straight t
-  :init (global-emojify-mode))
+  :init (global-emojify-mode)
+  :config
+  (my/leader-keys
+    "ie"  'emojify-insert-emoji))
 #+end_src
 ** Helpful
 Helpful adds a lot of very helpful (get it?) information to Emacs’ describe- command buffers. For example, if you use describe-function, you will not only get the documentation about the function, you will also see the source code of the function and where it gets used in other places in the Emacs configuration. It is very useful for figuring out how things work in Emacs.
@@ -1488,7 +1503,10 @@ Helpful adds a lot of very helpful (get it?) information to Emacs’ describe- c
   ([remap describe-function] . counsel-describe-function)
   ([remap describe-command] . helpful-command)
   ([remap describe-variable] . counsel-describe-variable)
-  ([remap describe-key] . helpful-key))
+  ([remap describe-key] . helpful-key)
+  :config
+  (my/leader-keys
+    "hk" 'helpful-key))
 #+end_src
 ** Better link opener
 #+begin_src elisp
@@ -1505,9 +1523,13 @@ To read / sync email in emacs. Using this only on home computers.
     (add-to-list 'load-path "/usr/share/emacs/site-lisp/mu4e"))
 
 (use-package mu4e
+  :defer 1
   :if (eq system-type 'gnu/linux)
   :ensure-system-package mu
   :config
+  (my/leader-keys
+    "em"  'mu4e)
+
   (setq mu4e-sent-messages-behaviour 'delete)
   (setq mu4e-get-mail-command "/usr/bin/mbsync -Va")
   (setq mu4e-change-filenames-when-moving t)
@@ -1585,6 +1607,7 @@ Alerts for emails
 #+begin_src elisp
 (use-package persistent-scratch
   :straight t
+  :defer 1
   :config
   (persistent-scratch-setup-default))
 #+end_src
@@ -1602,6 +1625,7 @@ Profiling.
 For the sweet RSS (data :scream:) feeds.
 #+begin_src elisp
 (use-package elfeed
+  :defer 3
   :straight t)
 #+end_src
 
@@ -1609,6 +1633,7 @@ Using org-mode to list feeds to track.
 #+begin_src elisp
 (use-package elfeed-org
   :straight t
+  :after elfeed
   :config
   (elfeed-org)
   (setq rmh-elfeed-org-files (list "~/.emacs.d/elfeed.org")))
@@ -1618,10 +1643,19 @@ Elfeed dashboard similar to mu4e one.
 #+begin_src elisp
 (use-package elfeed-dashboard
   :load-path "~/.emacs.d/lisp/elfeed-dashboard/"
-  :config (progn
-            (setq elfeed-dashboard-file "~/.emacs.d/lisp/elfeed-dashboard/elfeed-dashboard.org")
-             ;; to update feed counts automatically
-            (advice-add 'elfeed-search-quit-window :after #'elfeed-dashboard-update-links)))
+  :after elfeed
+  :config
+  ;; Keybindings
+  (my/leader-keys
+    "ed"  '(:ignore t :which-key "elfeed-dashboard")
+    "edd" 'elfeed-dashboard
+    "edi" 'elfeed-dashboard-edit)
+
+  (progn
+     (setq elfeed-dashboard-file "~/.emacs.d/lisp/elfeed-dashboard/elfeed-dashboard.org")
+     ;; to update feed counts automatically
+     (advice-add 'elfeed-search-quit-window :after #'elfeed-dashboard-update-links)))
+
 #+end_src
 ** Dired
 #+begin_src elisp
@@ -1633,8 +1667,12 @@ Elfeed dashboard similar to mu4e one.
       (lambda () (interactive) (message "Path: %s" target) (dired target))))
 
   (my/leader-keys
-   "drm" `(,(dw/dired-link "/run/media/gbojinov") :which-key "Media")
-   "fin" `(,(dw/dired-link "~/Nextcloud/org/finnish") :which-key "Finnish")))
+    "d" '(:ignore t :which-key "dired")
+    "dd" 'dired
+    "dj" 'dired-jump
+
+    "drm" `(,(dw/dired-link "/run/media/gbojinov") :which-key "Media")
+    "fin" `(,(dw/dired-link "~/Nextcloud/org/finnish") :which-key "Finnish")))
 #+end_src
 
 Adding fancy icons to dired items because why not.
@@ -1737,4 +1775,13 @@ For distraction free writing
   :config
   (my/leader-keys
      "wr" 'writeroom-mode))
+#+end_src
+
+** Ielm
+A built-in elisp repl in emacs
+#+begin_src elisp
+(use-package ielm
+  :config
+  (my/leader-keys
+    "eli" 'ielm))
 #+end_src
