--- a/init.org
+++ b/init.org
@@ -590,7 +590,12 @@ Dependency of the org-colored-text file
         org-src-preserve-indentation t ;; do not put two spaces on the left
         org-src-tab-acts-natively t)
 
+  ;; fix the annoying subscripts when writing an underline error
   (setq org-pretty-entities-include-sub-superscripts nil)
+
+  ;; bigger scale latex previews
+  (setq org-format-latex-options
+    `(:foreground default :background default :scale 4.0 :html-foreground "Black" :html-background "Transparent" :html-scale 1.0 :matchers ("begin" "$1" "$" "$$" "\\(" "\\[")))
 
   (setq yt-iframe-format
     (concat "<iframe width=\"440\""
