Evil org moved, cheatsheet, org-fragtog, jupyter setup, wiki binds

--- a/init.org
+++ b/init.org
@@ -41,10 +41,6 @@
     - [[#global-revert-mode][Global revert mode]]
   - [[#modeline][Modeline]]
   - [[#dashboard][Dashboard]]
-  - [[#evil-mode][Evil-mode]]
-    - [[#evil-mode-configs][Evil mode configs]]
-    - [[#org-mode-integration-with-evil][Org mode integration with evil]]
-    - [[#evil-collection-mode][Evil collection mode]]
   - [[#org-mode][Org-mode]]
     - [[#general][General]]
     - [[#capture-templates][Capture templates]]
@@ -69,6 +65,11 @@
     - [[#flashcards-with-anki][Flashcards with Anki]]
     - [[#wiki][Wiki]]
     - [[#org-mime][Org-mime]]
+    - [[#automatic-toggle-of-latex-previews][Automatic toggle of latex previews]]
+  - [[#evil-mode][Evil-mode]]
+    - [[#evil-mode-configs][Evil mode configs]]
+    - [[#org-mode-integration-with-evil][Org mode integration with evil]]
+    - [[#evil-collection-mode][Evil collection mode]]
   - [[#magit][Magit]]
   - [[#counsel][Counsel]]
   - [[#ivy][Ivy]]
@@ -108,6 +109,7 @@
   - [[#ielm][Ielm]]
   - [[#tramp][Tramp]]
   - [[#direnv][Direnv]]
+  - [[#cheatsheet][Cheatsheet]]
 
 ** Package manager
 Must be in the beginning for ~use-package~ usage below.
@@ -468,54 +470,6 @@ Ok I admit this is a little bloated, but I like something pretty to open when I 
 (use-package dashboard-hackernews
   :straight t)
 #+end_src
-** Evil-mode
-Vim keybinds and goodness in emacs
-
-*** Evil mode configs
-#+begin_src elisp
-(use-package evil
-  :straight t
-  :init
-  (setq evil-want-integration t)
-  (setq evil-want-keybinding nil)
-  :config
-  ;; Keybindings
-  (my/leader-keys
-    "w"  '(:ignore t :which-key "window")
-    "wh" 'evil-window-left
-    "wl" 'evil-window-right
-    "wk" 'evil-window-up
-    "wj" 'evil-window-down)
-
-  (evil-mode 1)
-  (evil-set-initial-state 'dashboard-mode 'normal)
-  (evil-set-undo-system 'undo-tree)
-  (define-key evil-normal-state-map (kbd "j") 'evil-next-visual-line)
-  (define-key evil-normal-state-map (kbd "k") 'evil-previous-visual-line))
-#+end_src
-*** Org mode integration with evil
-#+begin_src elisp
-(use-package evil-org
-  :straight t
-  :after (evil org)
-  :config
-  (add-hook 'org-mode-hook 'evil-org-mode)
-  (add-hook 'evil-org-mode-hook
-            (lambda ()
-              (evil-org-set-key-theme '(navigation insert textobjects additional calendar))))
-  (require 'evil-org-agenda)
-  (evil-org-agenda-set-keys)
-  (define-key evil-ex-map "e" 'counsel-find-file))
-#+end_src
-*** Evil collection mode
-Sets up various other emacs modes with evil-mode bindings
-#+begin_src elisp
-(use-package evil-collection
-  :straight t
-  :after evil
-  :config
-  (evil-collection-init))
-#+end_src
 ** Org-mode
 *** General
 Installing and configuring org-mode:
@@ -684,17 +638,6 @@ Disable line numbers in org-mode
 (use-package org-agenda
   :after org
   :config
-  ;; make org-agenda respect evil
-  (evil-set-initial-state 'org-agenda-mode 'normal)
-
-  ;; org-agenda custom bindings
-  (evil-define-key 'normal org-agenda-mode-map
-    "vd" 'org-agenda-day-view
-    "vw" 'org-agenda-week-view
-    "I"  'org-agenda-clock-in
-    "O"  'org-agenda-clock-out
-    "vR" 'org-agenda-clockreport-mode)
-
   ;; files that org-agenda will read from
   (setq org-agenda-files
   '("~/Nextcloud/Orgzly/gtd.org"
@@ -750,6 +693,8 @@ Disable line numbers in org-mode
   ;; Regular clock report parameters
   (setq org-clock-clocktable-default-properties
     '(:block day :maxlevel 9 :scope agenda :link t :compact t :step day :narrow 80 :fileskip0 t :stepskip0 t :formula %))
+  ;; org clock history items to remember
+  (setq org-clock-history-length 17)
   ;; Agenda clock report parameters
   (setq org-agenda-clockreport-parameter-plist
     '(:link t :maxlevel 6 :fileskip0 t :compact t :narrow 60 :score 0)))
@@ -850,11 +795,24 @@ For your journaling needs.
     "nj" 'org-journal-new-entry))
 #+end_src
 *** Org babel
+Emacs jupyter
+#+begin_src elisp
+(use-package jupyter
+  :straight t)
+#+end_src
+
+Convert org files to ipynb
+#+begin_src elisp
+(use-package ox-ipynb
+  :straight (:host github :repo "jkitchin/ox-ipynb" :branch "master"))
+#+end_src
+
 #+begin_src elisp
 (use-package ob-python   :after org)
 (use-package ob-shell    :after org)
 (use-package ob-js       :after org)
 (use-package ob-java     :after org)
+(use-package ob-jupyter  :after org)
 #+end_src
 
 Google translate
@@ -875,17 +833,6 @@ Translate in org src blocks
 (use-package ob-translate
   :straight t
   :after org)
-#+end_src
-
-Emacs ipython notebook
-#+begin_src elisp
-(use-package ein
-  :straight t)
-
-(use-package ob-ein  :after org)
-
-;; (use-package ox-ipynb
-;;   :straight t)
 #+end_src
 *** Notifications
 #+begin_src elisp
@@ -943,8 +890,8 @@ For a better way to group entries in the agenda.
   :config
   (my/leader-keys
     "c" '(:ignore t :which-key "store link")
-    "cc" 'sl-store-link
-    "cp" 'sl-insert-link))
+    "cc" 'org-super-links-store-link
+    "cp" 'org-super-links-insert-link))
 #+end_src
 *** Web tools
 #+begin_src elisp
@@ -1014,6 +961,8 @@ Creates the heading before an archived heading in the archive file
   :straight (:host github :repo "caiorss/org-wiki" :branch "master")
   :config
   (setq org-wiki-location "~/Nextcloud/org/wiki")
+  (setq org-wiki-template "#+TITLE:%n\n#+DESCRIPTION:\n#+KEYWORDS:\n#+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup\n#+STARTUP:  content\n\n\n- [[wiki:index][Index]]\n\n- Related: \n\n* %n\n")
+
   (my/leader-keys
     "ow" '(:ignore t :which-key "wiki")
 
@@ -1021,13 +970,79 @@ Creates the heading before an archived heading in the archive file
     "owl" 'org-wiki-insert-link
     "own" 'org-wiki-insert-new
     "owh" 'org-wiki-helm
-    "owc" 'org-wiki-close))
+    "owc" 'org-wiki-close
+    "owg" 'org-wiki-rgrep))
 #+end_src
 *** Org-mime
 For sending emails with org mode files
 #+begin_src elisp
 (use-package org-mime
   :straight t)
+#+end_src
+*** Automatic toggle of latex previews
+#+begin_src elisp
+(use-package org-fragtog
+  :straight t
+  :hook (org-mode . org-fragtog-mode))
+#+end_src
+** Evil-mode
+Vim keybinds and goodness in emacs
+
+*** Evil mode configs
+#+begin_src elisp
+(use-package evil
+  :straight t
+  :init
+  (setq evil-want-integration t)
+  (setq evil-want-keybinding nil)
+  :config
+  ;; Keybindings
+  (my/leader-keys
+    "w"  '(:ignore t :which-key "window")
+    "wh" 'evil-window-left
+    "wl" 'evil-window-right
+    "wk" 'evil-window-up
+    "wj" 'evil-window-down)
+
+  (evil-mode 1)
+  (evil-set-initial-state 'dashboard-mode 'normal)
+  (evil-set-undo-system 'undo-tree)
+  (define-key evil-normal-state-map (kbd "j") 'evil-next-visual-line)
+  (define-key evil-normal-state-map (kbd "k") 'evil-previous-visual-line))
+#+end_src
+*** Org mode integration with evil
+#+begin_src elisp
+(use-package evil-org
+  :straight t
+  :after (evil org)
+  :config
+  (add-hook 'org-mode-hook 'evil-org-mode)
+  (add-hook 'evil-org-mode-hook
+            (lambda ()
+              (evil-org-set-key-theme '(navigation insert textobjects additional calendar))))
+  (require 'evil-org-agenda)
+  (evil-org-agenda-set-keys)
+  (define-key evil-ex-map "e" 'counsel-find-file)
+
+  ;; make org-agenda respect evil
+  (evil-set-initial-state 'org-agenda-mode 'normal)
+
+  ;; org-agenda custom bindings
+  (evil-define-key 'normal org-agenda-mode-map
+    "vd" 'org-agenda-day-view
+    "vw" 'org-agenda-week-view
+    "I"  'org-agenda-clock-in
+    "O"  'org-agenda-clock-out
+    "vR" 'org-agenda-clockreport-mode))
+#+end_src
+*** Evil collection mode
+Sets up various other emacs modes with evil-mode bindings
+#+begin_src elisp
+(use-package evil-collection
+  :straight t
+  :after evil
+  :config
+  (evil-collection-init))
 #+end_src
 ** Magit
 The git supercharge
@@ -1645,9 +1660,9 @@ Search stuff from the comfort of your Emacs.
   :config
   ;; so bindings don't conflict
   (add-to-list 'evil-emacs-state-modes 'ledger-report-mode)
-  :mode "\\.dat\\'")
+  :mode (("\\.dat\\'" . ledger-mode)
+         ("\\.journal\\'" . ledger-mode)))
 #+end_src
-
 ** Writing
 *** Writegood mode
 A mode that checks your writing for common problems (in English)
@@ -1695,4 +1710,68 @@ For using direnv inside emacs.
   :straight t
   :config
   (direnv-mode))
+#+end_src
+
+** Cheatsheet
+#+begin_src elisp
+(use-package cheatsheet
+  :straight t
+  :config
+  (my/leader-keys
+    "ch" 'cheatsheet-show)
+
+  (cheatsheet-add-group 'Cheatsheet
+                        '(:key "SPC c h" :description "Show cheatsheet")
+                        '(:key "C-q"     :description "Close cheatsheet buffer"))
+
+
+  (cheatsheet-add-group 'GTD
+                        '(:key "SPC g g" :description "Open gtd.org")
+                        '(:key "SPC g t" :description "Open tickler.org")
+                        '(:key "SPC g i" :description "Open inbox.org")
+                        '(:key "SPC g h" :description "Open hobbies.org")
+                        '(:key "SPC g s" :description "Open someday.org")
+                        '(:key "SPC g d" :description "Open daily_reviews.org")
+                        '(:key "SPC g w" :description "Open weekly_reviews.org")
+                        '(:key "SPC g m" :description "Open monthly_reviews.org"))
+
+  (cheatsheet-add-group 'Projects
+                        '(:key "SPC p p"   :description "Select project")
+                        '(:key "SPC p f"   :description "Find file in project")
+                        '(:key "SPC p x e" :description "Open eshell in project root")
+                        '(:key "SPC p D"   :description "Open dired in project root")
+                        '(:key "SPC p k"   :description "Kill all project buffers")
+                        '(:key "SPC p a"   :description "Add new project to projectile")
+                        '(:key "SPC p r"   :description "Remove project from projectile")
+                        '(:key "SPC p S"   :description "Save all project buffers")
+                        '(:key "SPC o p g" :description "Select project todos to open"))
+
+  (cheatsheet-add-group 'Org
+                        '(:key "SPC m t"   :description "Change org todo state")
+                        '(:key "SPC m s"   :description "Schedule an org todo heading")
+                        '(:key "SPC m d"   :description "Make a deadline for an org todo heading")
+                        '(:key "SPC o a a" :description "Open org agenda")
+                        '(:key "SPC o c i" :description "Clock into task")
+                        '(:key "SPC o c o" :description "Clock out of task")
+                        '(:key "SPC o c l" :description "Clock into last clocked task")
+                        '(:key "SPC o c g" :description "Go to currently clocked task")
+                        '(:key "SPC o g"   :description "Search through headings in an org file")
+                        '(:key "SPC o d"   :description "Decrypt org file")
+                        '(:key "SPC o r"   :description "Refile heading in org file")
+                        '(:key "SPC o s"   :description "Archive heading in org file")
+                        '(:key "SPC o w i" :description "Org wiki index")
+                        '(:key "SPC o w c" :description "Close all org wiki buffers")
+                        '(:key "SPC o w h" :description "Helm search through org wiki file names")
+                        '(:key "SPC o w l" :description "Insert link into an org wiki file to another org wiki file")
+                        '(:key "SPC o w n" :description "Insert a link to and create a new org wiki file")
+                        '(:key "SPC o t u" :description "Bump up org timestamp by a day")
+                        '(:key "SPC o t d" :description "Down org timestamp by a day")
+                        '(:key "SPC o t l" :description "Toggle link display in org mode (shows what stuff is linked to)")
+                        '(:key "SPC n f"   :description "Find a file in org roam")
+                        '(:key "SPC n i"   :description "Insert a link to a file in an org roam file and open it. Creates a backlink")
+                        '(:key "SPC n I"   :description "Insert a link to a new file in an org roam file but don't open it. Creates a backlink")
+                        '(:key "SPC n l"   :description "Open org roam backlinks sidebuffer")
+                        '(:key "SPC n o"   :description "Capture a new org roam daily entry")
+                        '(:key "SPC n t"   :description "Go to today's daily file in org roam")
+                        '(:key "SPC n y"   :description "Go to yesterday's daily file in org roam")))
 #+end_src
