Binding to ukulele tracking file

--- a/init.org
+++ b/init.org
@@ -186,6 +186,7 @@ General keybindings
 (setq gtd-someday-file "~/Nextcloud/Orgzly/someday.org")
 (setq gtd-tickler-file "~/Nextcloud/Orgzly/tickler.org")
 (setq gtd-hobbies-file "~/Nextcloud/Orgzly/hobbies.org")
+(setq ukulele-file "~/Nextcloud/Orgzly/ukulele.org")
 (setq tech-notebook-file "~/Nextcloud/org/tech_notebook.org")
 (setq work-file "~/Nextcloud/org/work/work.org")
 (setq weekly-reviews-file "~/Nextcloud/org/weekly_reviews.org")
@@ -231,6 +232,7 @@ General keybindings
     "gs"  (list (lambda () (interactive) (find-file gtd-someday-file))     :which-key "someday")
     "gt"  (list (lambda () (interactive) (find-file gtd-tickler-file))     :which-key "tickler")
     "gh"  (list (lambda () (interactive) (find-file gtd-hobbies-file))     :which-key "hobbies")
+    "gu"  (list (lambda () (interactive) (find-file ukulele-file))         :which-key "ukulele")
     "gm"  (list (lambda () (interactive) (find-file monthly-reviews-file)) :which-key "monthly")
     "gd"  (list (lambda () (interactive) (find-file daily-reviews-file))   :which-key "daily")
     "gw"  (list (lambda () (interactive) (find-file weekly-reviews-file))  :which-key "weekly")
